--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "format": "next lint --fix --dir src",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test": "jest"
+    "test": "jest",
+    "lint-staged": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx}": [
+      "next lint --fix --dir src"
+    ]
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
@@ -61,6 +67,7 @@
     "husky": "^8.0.1",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.7.4",
